Fix bookmarks align items

--- a/public/styles.css
+++ b/public/styles.css
@@ -157,7 +157,12 @@ text-decoration: none;
 cursor: pointer;
 }
 
-
+#saved-course {
+    flex-direction: row;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
 
 
     
